2005-09-20  Tor Lillqvist  <tml@novell.com>

	* gdk/win32/gdkselection-win32.c
	(gdk_selection_owner_get_for_display): Do return the correct owner
	for CLIPBOARD (i.e., the owner of the Windows Clipboard, if it is
	a window GDK knows about). The reason to return NULL seems to have
	gone when in the fix for bug #163702 the artificial
	GDK_SELECTION_CLEAR event generation was removed from
	gdk_selection_send_notify_for_display(). Fixes bug #316552.

2005-09-19  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkiconview.c: Use g_list_nth_data() instead of g_list_nth()->data
	in multiple places to avoid segfaults if the index is out of range.  
	(#316422, Guillaume Cottenceau)
	(gtk_icon_view_set_drag_dest_item): 
	(gtk_icon_view_scroll_to_path): Fix a typo in the docs.  (#316419,
	#316424, Guillaume Cottenceau)

Fri Sep 16 14:00:20 2005  Tim Janik  <timj@imendio.com>

        * gtk/gtkwindow.c: fix bug #316180.
        gtk_window_map_event(): new function to work around lost unmap requests.

2005-09-16  Tor Lillqvist  <tml@novell.com>

	* modules/engines/ms-windows/msw_style.c (draw_extension,
	draw_box_gap): Check whether the widget actually is a GtkNotebook
	before treating it as such. Drop some unneeded local variables,
	use parameter with same information instead. (#316412)

2005-09-14  Matthias Clasen  <mclasen@redhat.com>

	* gtk/updateiconcache.c (foreach_remove_func): Fix
	a use-after-free bug.  (#316256, Alexander Nedotsukov)

2005-09-13  Federico Mena Quintero  <federico@ximian.com>

	* gtk/gtkfilechooserdefault.c: Turn off profiling for the stable
	branch (#undef PROFILE_FILE_CHOOSER).

2005-09-13  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkiconview.c (gtk_icon_view_class_init):
	(gtk_icon_view_get_dest_item_at_pos):  Fix typos in the 
	docs.  (#316008, #316027, #316121, Guillaume Cottenceau)

	* gtk/gtkdnd.c (gtk_drag_set_icon_name): Fix a copy-and-paste
	mistake in the docs.  (#315993, Guillaume Cottenceau)
